--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
 }
 
@@ -24,15 +25,113 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+body {
+  background: #f6f5f7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(315deg, black 3%, #16528f 68%, black 98%);
+  animation: gradient 45s ease infinite;
+  background-size: 400% 400%;
+}
+
+form {
+  padding: 0 50px;
+  text-align: center;
+}
+
+.container {
+  position: relative;
+  width: 75em;
+  max-width: 100%;
+  min-height: 48em;
+}
+
+.form-container {
+  transform: translateX(100%);
+  position: absolute;
+  /* top: 20%; */
+  width:30%;
+  height: 100%;
+  right: 31%;
+  background-color:burlywood;
+}
+
+.overlay-container {
+  position: absolute;
+  left: 80%;
+  width: 80%;
+  height: 100%;
+  transform: translateX(-100%);
+  /* background: linear-gradient(to right, #ff4b2b, #ff416c); */
+}
+
+@keyframes gradient {
+  0% {
+      background-position: 0% 0%;
+  }
+  50% {
+      background-position: 100% 100%;
+  }
+  100% {
+      background-position: 0% 0%;
+  }
+}
+
+.wave {
+  background: rgb(255 255 255 / 25%);
+  border-radius: 1000% 1000% 0 0;
+  position: fixed;
+  width: 200%;
+  height: 12em;
+  animation: wave 10s -3s linear infinite;
+  transform: translate3d(0, 0, 0);
+  opacity: 0.8;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.wave:nth-of-type(2) {
+  bottom: -1.25em;
+  animation: wave 18s linear reverse infinite;
+  opacity: 0.8;
+}
+
+.wave:nth-of-type(3) {
+  bottom: -2.5em;
+  animation: wave 20s -1s reverse infinite;
+  opacity: 0.9;
+}
+
+@keyframes wave {
+  2% {
+      transform: translateX(1);
+  }
+
+  25% {
+      transform: translateX(-25%);
+  }
+
+  50% {
+      transform: translateX(-50%);
+  }
+
+  75% {
+      transform: translateX(-25%);
+  }
+
+  100% {
+      transform: translateX(1);
   }
 }
