--- a/src/App.css
+++ b/src/App.css
@@ -1,79 +1,14 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 body {
-  background: #f6f5f7;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background: linear-gradient(315deg, black 3%, #16528f 68%, black 98%);
+  background: linear-gradient(315deg, rgb(32, 32, 32) 3%, #16528f 68%, rgb(32, 32, 32) 98%);
   animation: gradient 45s ease infinite;
   background-size: 400% 400%;
 }
 
-form {
-  padding: 0 50px;
-  text-align: center;
-}
-
-.container {
-  position: relative;
-  width: 75em;
-  max-width: 100%;
-  min-height: 48em;
-}
-
-.form-container {
-  transform: translateX(100%);
-  position: absolute;
-  /* top: 20%; */
-  width:30%;
-  height: 100%;
-  right: 31%;
-  background-color:burlywood;
-}
-
-.overlay-container {
-  position: absolute;
-  left: 80%;
-  width: 80%;
-  height: 100%;
-  transform: translateX(-100%);
-  /* background: linear-gradient(to right, #ff4b2b, #ff416c); */
+.main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 91vh;
 }
 
 @keyframes gradient {
